src/objects/cscfga__Attribute_Definition__c.object
<CustomObject>
    <fields>
        <fullName>LG_Commitment__c</fullName>
        <label>Commitment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_KeyAttributeSequence__c</fullName>
        <description>The weight to be assigned to the Attribute when sorting key attributes for display. Only relevant to key attributes.</description>
        <inlineHelpText>The weight to be assigned to the Attribute when sorting key attributes for display. Only relevant to key attributes.</inlineHelpText>
        <label>Key Attribute Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_KeyAttribute__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, attribute will be considered as one of the key attributes, and will be used for presentation purposes on the UI.</description>
        <inlineHelpText>If checked, attribute will be considered as one of the key attributes, and will be used for presentation purposes on the UI.</inlineHelpText>
        <label>Key Attribute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LG_OLIType__c</fullName>
        <label>OLI Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Promotional Discount</fullName>
                </value>
                <value>
                    <fullName>Promotional Action</fullName>
                </value>
                <value>
                    <fullName>Main OLI</fullName>
                </value>
                <value>
                    <fullName>Closing Deal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_OPTKey__c</fullName>
        <label>OPT Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_ProductDetailType__c</fullName>
        <label>Product Detail Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Order Detail</fullName>
                    <default>true</default>
                    <label>Order Detail</label>
                </value>
                <value>
                    <fullName>Bundle Detail</fullName>
                </value>
                <value>
                    <fullName>Contract Term</fullName>
                </value>
                <value>
                    <fullName>JSON Porting SOHO Telephony</fullName>
                </value>
                <value>
                    <fullName>JSON Porting Mobile Telephony</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LG_QuoteMappingAttributeFields__c</fullName>
        <label>Quote Mapping Attribute Fields</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_QuoteMappingValueField__c</fullName>
        <label>Quote Mapping Value Field__c</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cfgoffline__Reference_Name__c</fullName>
        <label>Reference Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Attribute_Definition_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Field not in use.</inlineHelpText>
        <label>Attribute Definition Group</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>cscfga__Attribute_Definition_Group__c.cscfga__Product_Definition__c</field>
                <operation>equals</operation>
                <valueField>$Source.cscfga__Product_Definition__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>cscfga__Attribute_Definition_Group__c</referenceTo>
        <relationshipLabel>Attribute Definitions</relationshipLabel>
        <relationshipName>Attribute_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Base_Price__c</fullName>
        <inlineHelpText>The default price for the attribute if used as a line item.</inlineHelpText>
        <label>Base Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>cscfga__Calculation_Sequence__c</fullName>
        <inlineHelpText>The weight to be assigned to Attributes defined by this Attribute Definition when sorting the order of evaluation of calculations. Only relevant to &apos;calculation&apos; type Attribute Definitions.</inlineHelpText>
        <label>Calculation Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Cascade_value__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field not in use.</inlineHelpText>
        <label>Cascade value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Column_Size_CSV__c</fullName>
        <description>Comma separated value list containing column widths of select list lookup.</description>
        <inlineHelpText>Comma separated value list containing displayed column widths (integers) for Attributes defined by this Attribute Definition. Only relevant for lookup Attributes set to render as select lists. Unit used for rendering is em.</inlineHelpText>
        <label>Column Size CSV</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Column_Span__c</fullName>
        <defaultValue>1</defaultValue>
        <inlineHelpText>The column span in the configuration screen layout for Attributes defined by this Attribute Definition. &apos;1&apos; for a single column, &apos;2&apos; for both columns.</inlineHelpText>
        <label>Column Span</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Column_Style__c</fullName>
        <inlineHelpText>CSS style to be applied to the display of Attributes defined by this Attribute Definition. Only relevant to &apos;text display&apos; type Attribute Definitions.</inlineHelpText>
        <label>Column Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Column__c</fullName>
        <inlineHelpText>Specifies the column for Attributes defined by this Attribute Definition in the configuration screen layout. &apos;0&apos; for the left column, &apos;1&apos; for the right column.</inlineHelpText>
        <label>Column</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Configuration_Screen__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The generated configuration screen on which Attributes of this Attribute Definition will be displayed.</inlineHelpText>
        <label>Configuration Screen</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>cscfga__Configuration_Screen__c.cscfga__Product_Definition__c</field>
                <operation>equals</operation>
                <valueField>$Source.cscfga__Product_Definition__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>cscfga__Configuration_Screen__c</referenceTo>
        <relationshipLabel>Attribute Definitions (generated screen)</relationshipLabel>
        <relationshipName>Attribute_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Custom_Validation_Error_Message__c</fullName>
        <description>The message to be displayed if the attribute value does not match the custom validation pattern.</description>
        <inlineHelpText>Error message to be displayed for Attributes defined by this Attribute Definition when their value does not fit the custom validation pattern.</inlineHelpText>
        <label>Custom Validation Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Data_Type__c</fullName>
        <inlineHelpText>Data type indicating how to interpret the value of an Attribute defined by this Attribute Definition. E.g. &apos;String&apos;, &apos;Integer&apos; etc.</inlineHelpText>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
                <value>
                    <fullName>Double</fullName>
                </value>
                <value>
                    <fullName>Integer</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                    <default>true</default>
                    <label>String</label>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscfga__Default_Value__c</fullName>
        <inlineHelpText>Default value for Attributes defined by this Attribute Definition. In the case of calculation type Attribute Definitions, this will be evaluated as an expression. See documentation for expression syntax.</inlineHelpText>
        <label>Default Value</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cscfga__Enable_Multiple_Selection__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For Select List and Lookup attributes, enable multiple items to be selected.</description>
        <inlineHelpText>If checked, Attributes defined by this Attribute Definition will accept multiple values. Only relevant to lookup type Attribute Definitions. In the standard UI, will cause relevant Attributes to be displayed as related lists.</inlineHelpText>
        <label>Enable Multiple Selection</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Enable_Predictive_Search__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For select lists, enable automatic searching of the list while the user is typing.</description>
        <inlineHelpText>Enables automatic search while user is typing. Only relevant for attribute type Select List.</inlineHelpText>
        <label>Enable Predictive Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Enable_null_option__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Enable a null option on Select Lists and Radio Buttons (which would not validate if the field is required)</description>
        <inlineHelpText>If checked, a &apos;--None--&apos; option will be available for fields that provide a list of choices. Only relevant for attribute types: Select List and Radio button.</inlineHelpText>
        <label>Enable Null Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Field__c</fullName>
        <inlineHelpText>Field not in use.</inlineHelpText>
        <label>Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Hidden__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this attribute is not displayed on the screen during the configuration process.</inlineHelpText>
        <label>Hidden</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Is_Line_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, attributes based on this definition will be displayed as a line item on the configured product details.</inlineHelpText>
        <label>Is Line Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Is_Rate_Line_Item__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator that attribute is Rate/Usage line item</description>
        <inlineHelpText>If checked, this attribute definition is a rate/usage line item.</inlineHelpText>
        <label>Is Rate Line Item</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Label__c</fullName>
        <inlineHelpText>Text label which will be displayed during configuration instead of the Attribute&apos;s name.</inlineHelpText>
        <label>Label</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>cscfga__Line_Item_Description__c</fullName>
        <inlineHelpText>Description of the line item to be displayed on the pricing summary screen and potentially proposal and invoice documents. If this field has no value, ‘EMPTY’ will be displayed for all non-Text Display type attributes.</inlineHelpText>
        <label>Line Item Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Line_Item_Sequence__c</fullName>
        <inlineHelpText>The weight to be assigned to the Attribute when sorting line items for display. Only relevant to line item Attributes.</inlineHelpText>
        <label>Line Item Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__List_Columns__c</fullName>
        <inlineHelpText>Used for adding columns of Related Products or Multiselect Lookups as a CSV list. For Related Products provide attribute names which are to be displayed in the related list columns. For Multiselect Lookups provide the field label of the looked-up object.</inlineHelpText>
        <label>List Columns</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Lookup_Config__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Use to create a relationship between the Lookup type attribute definition and a Lookup Config.</inlineHelpText>
        <label>Lookup Config</label>
        <referenceTo>cscfga__Lookup_Config__c</referenceTo>
        <relationshipLabel>Attribute Definitions</relationshipLabel>
        <relationshipName>Attribute_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Lookup_Query__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Field not in use.</inlineHelpText>
        <label>Lookup Query</label>
        <referenceTo>cscfga__Lookup_Query__c</referenceTo>
        <relationshipLabel>Attribute Definitions</relationshipLabel>
        <relationshipName>Attribute_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Max__c</fullName>
        <inlineHelpText>The maximum cardinality for this attribute. Only relevant for Multi-Select Lookups and Related Product type attributes.</inlineHelpText>
        <label>Max</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Min__c</fullName>
        <inlineHelpText>Field not in use.</inlineHelpText>
        <label>Min</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Minimum_Input_Length__c</fullName>
        <description>Minimum input length for select list lookup style.</description>
        <inlineHelpText>Minimum number of characters that have to be entered into search box on select list lookup.</inlineHelpText>
        <label>Minimum Input Length</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Output_Mapping__c</fullName>
        <inlineHelpText>The business object &amp; field names this attribute can be mapped to.</inlineHelpText>
        <label>Output Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Pattern__c</fullName>
        <description>A Regular Expression pattern used to validate the value of this attribute.</description>
        <inlineHelpText>A regular expression to be used to validate the value of Attributes defined by this Attribute Definition.</inlineHelpText>
        <label>Custom Validation Pattern</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Product_Definition__c</fullName>
        <inlineHelpText>The Product Definition to which this Attribute Definition belongs.</inlineHelpText>
        <label>Product Definition</label>
        <referenceTo>cscfga__Product_Definition__c</referenceTo>
        <relationshipLabel>Attribute Definitions</relationshipLabel>
        <relationshipName>Attribute_Definitions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>cscfga__Quick_Entry_Grid_Orientation__c</fullName>
        <inlineHelpText>Field not in use.</inlineHelpText>
        <label>Quick Entry Grid Orientation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Horizontal</fullName>
                </value>
                <value>
                    <fullName>Vertical</fullName>
                    <default>true</default>
                    <label>Vertical</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscfga__Recurring__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this Attribute Definition should be treated as a recurring line item. If unchecked, this Attribute Definition should be treated as a one-off line item. Only relevant to line item Attribute Definitions.</inlineHelpText>
        <label>Recurring</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Reference_Value__c</fullName>
        <description>Text included in bundle summary to clearly distinguish Rate/Usage line items from other line items</description>
        <inlineHelpText>Reference value is a text label which will be displayed next to Rate Line Item&apos;s price. Used in correlation with &apos;Is Rate Line Item&apos; checkbox. Can contain basic html mark-up and cannot contain scripts.</inlineHelpText>
        <label>Reference Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__Required__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, the Attribute will be mandatory field at the start of the configuration process. Can be changed with Actions during configuration.</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Row__c</fullName>
        <inlineHelpText>Row number that determines where attribute appears on Configuration Screen.</inlineHelpText>
        <label>Row</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Scale__c</fullName>
        <inlineHelpText>The number of decimal places. Only relevant for Decimal attribute type. Default value is 2 decimal places.</inlineHelpText>
        <label>Scale</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Screen_Section__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Name of the Screen Section to which the attribute belongs.</inlineHelpText>
        <label>Screen Section</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>cscfga__Screen_Section__c.cscfga__Configuration_Screen__c</field>
                <operation>equals</operation>
                <valueField>$Source.cscfga__Configuration_Screen__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>cscfga__Screen_Section__c</referenceTo>
        <relationshipLabel>Attribute Definitions (generated screens)</relationshipLabel>
        <relationshipName>Attribute_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cscfga__Select_List_Lookup__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This lookup style is presented as a searchable pick list which is dynamically populated with matches as the user types.</description>
        <inlineHelpText>If checked, Lookup attribute will be presented as inline select style attribute instead of pop-up dialog.</inlineHelpText>
        <label>Select List Lookup</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Text_input_lines__c</fullName>
        <inlineHelpText>Number of lines for User Input box during configuration process. Only relevant for Attribute Definition type: User Input. Default is 1 line.</inlineHelpText>
        <label>Text input lines</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cscfga__Type__c</fullName>
        <inlineHelpText>Type of this Attribute Definition.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calculation</fullName>
                </value>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Lookup</fullName>
                </value>
                <value>
                    <fullName>MultiSelect List</fullName>
                </value>
                <value>
                    <fullName>Related Product</fullName>
                </value>
                <value>
                    <fullName>Select List</fullName>
                </value>
                <value>
                    <fullName>Text Display</fullName>
                </value>
                <value>
                    <fullName>User Input</fullName>
                </value>
                <value>
                    <fullName>Radio Button</fullName>
                </value>
                <value>
                    <fullName>Display Value</fullName>
                </value>
                <value>
                    <fullName>Package Slot</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscfga__Use_Quick_Entry_Grid__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Field not in use.</inlineHelpText>
        <label>Use Quick Entry Grid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__Validation_Pattern__c</fullName>
        <inlineHelpText>Field not in use.</inlineHelpText>
        <label>Validation Pattern</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Decimal</fullName>
                </value>
                <value>
                    <fullName>Integer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>cscfga__attribute_help_text__c</fullName>
        <inlineHelpText>Text which will be displayed next to an attribute in form of a mouseover help text. If blank, no help text will be displayed.</inlineHelpText>
        <label>Attribute Help Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__configuration_output_mapping__c</fullName>
        <description>The name of the field on Product Configuration to which the Attribute value will be mapped.</description>
        <inlineHelpText>The name of the field on Product Configuration to which the Attribute value will be mapped.</inlineHelpText>
        <label>Configuration Output Mapping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__high_volume__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables large numbers of related products under this attribute by restricting access to computationally expensive functionality.</description>
        <inlineHelpText>Enables large numbers of related products under this attribute by restricting access to computationally expensive functionality.</inlineHelpText>
        <label>Enable for high volumes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__is_significant__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicator that change of value of this attribute should desynchronise the bundle.</description>
        <inlineHelpText>If checked, any changes made to this attribute will cause its Product Bundle to be de-synchronised from the Opportunity, if applicable.</inlineHelpText>
        <label>Desynchronises Bundle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__reference_name__c</fullName>
        <description>Hierarchical reference used to refer to attributes defined by this definition in Runtime V2.</description>
        <inlineHelpText>Hierarchical reference used to refer to attributes defined by this definition in Runtime V2.</inlineHelpText>
        <label>Reference Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cscfga__show_in_summary__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, high volume related products and their line items will be presented hierarchically, in expandable lists in the basket summary page. Applicable only to attributes that are enabled for high volumes.</inlineHelpText>
        <label>Show in summary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cscfga__store_as_json__c</fullName>
        <defaultValue>false</defaultValue>
        <description>All attributes with attribute definitions &quot;Store as JSON&quot; ticked, are stored as JSON attachment to its product configuration. Line items and Related Product attributes will not be stored in JSON attachment.</description>
        <inlineHelpText>All attributes with attribute definitions &quot;Store as JSON&quot; ticked, are stored as JSON attachment to its product configuration. Line items and Related Product attributes will not be stored in JSON attachment.</inlineHelpText>
        <label>Store as JSON</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csexpimp1__guid__c</fullName>
        <description>GUID for JSON export/import</description>
        <externalId>true</externalId>
        <inlineHelpText>GUID for JSON export/import</inlineHelpText>
        <label>GUID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>csmle__Aggregator__c</fullName>
        <inlineHelpText>The function to use to aggregate this attribute when displayed in a grid of multiple configurations.  Blanks means no aggregation</inlineHelpText>
        <label>Aggregator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Avg</fullName>
                </value>
                <value>
                    <fullName>Min</fullName>
                </value>
                <value>
                    <fullName>Max</fullName>
                </value>
                <value>
                    <fullName>Sum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>csmle__Execute_Rules_On_Update__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>For multi-edit screen, when changing this value, should rules be executed? (blank = true)</inlineHelpText>
        <label>Execute Rules On Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csmle__Multi_Edit_Column_Width_Pixels__c</fullName>
        <label>Multi-Edit Column Width (Pixels)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Calculate_Delta__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If left unchecked, delta won&apos;t be calculated for this attribute</description>
        <inlineHelpText>If left unchecked, delta won&apos;t be calculated for this attribute</inlineHelpText>
        <label>Calculate Delta</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Is_Asset_Generating__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Denotes that the Attribute represents one or more Assets</description>
        <inlineHelpText>Denotes that the Attribute represents one or more Assets</inlineHelpText>
        <label>Is Asset Generating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>csordtelcoa__Show_in_Product_Visualizer__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If checked, attribute will be rendered in product visualizer</description>
        <inlineHelpText>If checked, attribute will be rendered in product visualizer</inlineHelpText>
        <label>Show in Product Visualizer</label>
        <type>Checkbox</type>
    </fields>
    <label>Attribute Definition</label>
    <listViews>
        <fullName>cscfga__All</fullName>
        <columns>NAME</columns>
        <columns>cscfga__Label__c</columns>
        <columns>cscfga__Type__c</columns>
        <columns>cscfga__Output_Mapping__c</columns>
        <columns>cscfga__Product_Definition__c</columns>
        <columns>cscfga__Required__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>cscfga__Product_Definition__c</field>
            <operation>notContain</operation>
            <value>Auto</value>
        </filters>
        <filters>
            <field>cscfga__Product_Definition__c</field>
            <operation>notContain</operation>
            <value>old</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attribute Definitions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>csexpimp1__Guid_Format_Check</fullName>
        <active>true</active>
        <description>Validates the format of GUID, but allows for it to remain blank.</description>
        <errorConditionFormula>AND(NOT( REGEX( csexpimp1__guid__c , &quot;\\w{8}-\\w{4}-\\w{4}-\\w{4}-\\w{12}&quot;) )
, NOT(ISBLANK(csexpimp1__guid__c )))</errorConditionFormula>
        <errorDisplayField>csexpimp1__guid__c</errorDisplayField>
        <errorMessage>Required format of the GUID is xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx
With x being any alphanumeric character (letter or digit).</errorMessage>
    </validationRules>
</CustomObject>